@@ -23,6 +23,7 @@ Version 1.7.1+svn:
    * Fixed bug #13626: Bug about no option to turn on/off save delete confimation. (patch #1192)
    * Allow [advanced_preference]s to be of the 'int' type, appearing as a slider
    * Add better configurable linked widgets in the new gui
+   * Allow to make items in a listbox invisible (needed for filtering)
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
